backend/bucketlist_k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucket-backend-deployment
  labels:
    app: bucketList
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bucketList
  template:
    metadata:
      labels:
        app: bucketList
    spec:
      containers:
      - name: bucketList-container
        image: cherryriversafe/bucketlist-backend:latest
        ports:
        - containerPort: 80
