backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bucketlist-service
spec:
  selector:
    app: bucketList
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
